App.css
/*
Green #79c843 rgb(121, 200, 67)
Blue #4491c9 rgb(68, 145, 201)
Red #c94344 rgb(201, 67, 68)
*/

.bgcolor1 {
	background-color: #C6DAF2;/*#717C89;*/
}

.faintfg1 {
	color: #A1B0C4;
}

.bgcolor2 {
	background-color: #CAECF7;/*#8AA2A9;*/
}

.bgcolor3 {
	background-color: #EEF1EF;
}

.bgcolor4 {
	background-color: #CEDBED;/*#A9B4C2;*/
}

.bgcolorwhite {
	background-color: #F9FCFA;
}

.fgcolor1 {
	color: #065143;
}

.fgcolor2 {
	color: #129490;
}

.fgcolor3 {
	color: #86CD82;
}

.accentcolor1 {
	color: #DB5461;
}

.showcase-image {
	border-radius: 6px;
	
	width: 35vw;
	max-width: 500px;
	
	margin: 10px;
}

.next-slide {
	position: absolute;
	
	left: 0;
	right: 0;
	bottom: 10px;
}

.next-slide:hover {
	animation-duration: 1s;
	animation-name: pulse;
	animation-iteration-count: infinite;
	animation-direction: alternate;
	
	-webkit-animation-timing-function: linear; /* Chrome, Safari, Opera */
    animation-timing-function: linear;
}

@keyframes pulse {
  from {
    opacity: 1;
  }

  to {
    opacity: 0.3;
  }
}

p.light-gray, span.light-gray, .light-gray {
	color: #c0c0c0;
}

.label.light-gray {
	border-color: #c0c0c0;
}

p.gray, span.gray, .gray {
	color: #5a5b5a;
}

.label.gray {
	border-color: #5a5b5a;
}

p.dark-gray, span.dark-gray, .dark-gray {
	color: #4c4d4f;
}

.label.dark-gray {
	border-color: #4c4d4f;
}

p.green, span.green, .green {
	color: #79c843;
}

.label.green {
	border-color: #79c843;
}

p.blue, span.blue, .blue {
	color: #4491c9;
}

.label.blue {
	border-color: #4491c9;
}

p.red, span.red, .red {
	color: #c94344;
}

.label.red {
	border-color: #c94344;
}

@viewport {
	width: device-width;
	initial-scale: .8;
	user-scalable: no;
}

.left-arrow, .right-arrow {
	cursor: pointer;
	
	width: 38.78px;
	height: 30px;
}

.no.margin {
	margin: 0;
}

.no.padding {
	padding: 0;
}

.separator {
	width: 100%;
	
	border-bottom: 1px solid #cdcdcd;
	
	margin-top: 6px;
	margin-bottom: 6px;
	
	display: block;
}

.updated-dot {
	position: absolute;
	top: 1px;
	right: 1px;
	width: 10px;
	height: 10px;
	display: block;
	background-color: #79c843;
	border-radius: 100%;
}

.updated-text {
	position: absolute;
	
	right: -20px;
	top: -4px;
	
	font-family: 'Avenir Next Bold';
	
	font-size: 12px;
	
	color: #79c843;
}

.left {
	text-align: left;
}

/*
@media (min-width: 801px) {
	@viewport {
		width: device-width;
		zoom: .7;
	}
}

@media (max-width: 800px) {
	@viewport {
		width: device-width;
		initial-scale: 1;
		user-scalable: no;
	}
}*/

@font-face {
  font-family: 'Avenir Next Bold';
  src: url('Shared/Fonts/AvenirNext-Bold.eot'); /* IE9 Compat Modes */
  src: url('Shared/Fonts/AvenirNext-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('Shared/Fonts/AvenirNext-Bold.woff2') format('woff2'), /* Super Modern Browsers */
       url('Shared/Fonts/AvenirNext-Bold.woff') format('woff'), /* Pretty Modern Browsers */
       url('Shared/Fonts/AvenirNext-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
       url('Shared/Fonts/AvenirNext-Bold.svg#AvenirNext-Bold') format('svg'); /* Legacy iOS */
}

@font-face {
  font-family: 'Avenir Next Regular';
  src: url('Shared/Fonts/AvenirNext-Regular.eot'); /* IE9 Compat Modes */
  src: url('Shared/Fonts/AvenirNext-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('Shared/Fonts/AvenirNext-Regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('Shared/Fonts/AvenirNext-Regular.woff') format('woff'), /* Pretty Modern Browsers */
       url('Shared/Fonts/AvenirNext-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('Shared/Fonts/AvenirNext-Regular.svg#AvenirNext-Regular') format('svg'); /* Legacy iOS */
}

.date {
	margin-top: -15px;
}

.slide {
	padding: 0 10px;
}

#braden {
	font-size: 100px;
	
	margin-top: 20px;
	
	line-height: 1;
}

.profile-image {
	width: 180px;
	height: 180px;
}

div.social > a > img {
	height: 30px;
}

div.social {
	margin-top: 10px;
}

div.social > a {
	margin: 0 5px;
}

h1 {
	font-size: 28px;
}

h2 {
	font-size: 28px;
}

h3 {
	font-size: 23px;
}

h4 {
	font-size: 18px;
}

h5 {
	font-size: 14px;
}

h6 {
	font-size: 12px;
}

@media (min-width: 700px) {
	.slide {
		padding: 0 20px;
	}
	
	#braden {
		font-size: 150px;
	}
	
	.profile-image {
		width: 180px;
		height: 180px;
	}
	
	div.social > a > img {
		height: 40px;
	}
	
	div.social {
		margin-top: 12px;
	}
	
	div.social > a {
		margin: 0 6px;
	}
	
	h1 {
		font-size: 45px;
	}
	
	h2 {
		font-size: 34px;
	}
	
	h3 {
		font-size: 28px;
	}
	
	h4 {
		font-size: 21px;
	}
	
	h5 {
		font-size: 17px;
	}
	
	h6 {
		font-size: 12px;
	}
}

@media (min-width: 900px) {
	.slide {
		padding: 0 50px;
	}
	
	#braden {
		font-size: 200px;
	}
	
	.profile-image {
		width: 220px;
		height: 220px;
	}
	
	div.social > a > img {
		height: 55px;
	}
	
	div.social {
		margin-top: 16px;
	}
	
	div.social > a {
		margin: 0 8px;
	}
	
	h1 {
		font-size: 60px;
	}
	
	h2 {
		font-size: 42px;
	}
	
	h3 {
		font-size: 35px;
	}
	
	h4 {
		font-size: 25px;
	}
	
	h5 {
		font-size: 22px;
	}
	
	h6 {
		font-size: 17px;
	}
}

@media (min-width: 1400px) {
	.slide {
		padding: 0 200px;
	}
	
	#braden {
		font-size: 300px;
	}
	
	.profile-image {
		width: 300px;
		height: 300px;
	}
	
	div.social > a > img {
		height: 75px;
	}
	
	div.social {
		margin-top: 20px;
	}
	
	div.social > a {
		margin: 0 10px;
	}
	
	h1 {
		font-size: 70px;
	}
	
	h2 {
		font-size: 50px;
	}
	
	h3 {
		font-size: 40px;
	}
	
	h4 {
		font-size: 30px;
	}
	
	h5 {
		font-size: 25px;
	}
	
	h6 {
		font-size: 20px;
	}
}

*[ng-click]:not(#content), *[ng-double-click], *[tr-link], *[tr-popup], tr-link {
	cursor: pointer;
}

*[draggable] {
	cursor: grab;
}

*.dragging[draggable] {
	cursor: grabbing;
}

.inline {
	display: inline;
}

.inline-block {
	display: inline-block;
}

.inline-table {
	display: inline-table;
}

#wolfpaq,
#wolfpaq h1,
#wolfpaq h4 {
	color: #79c843;
}

#wolfpaq a {
	color: white;
}

#wolfpaq table {
	width: 100%;
}

#wolfpaq table img {
	width: 25vw;
	max-width: 300px;
}
/* ... */

